# DriftScale

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: Dockerfile  main.py
configs/aws/: demo.yaml
configs/env/: azure_v1.yaml  azure_v2.yaml  convex.yaml  linear.yaml  synthetic.yaml  threshold.yaml
configs/train/: ppo.yaml  ppo_replay.yaml
data/samples/: azure_v1_tiny.csv  azure_v2_tiny.csv
driftscale/: __init__.py
driftscale/agents/: __init__.py  train_ppo.py  train_ppo_replay.py
driftscale/aws/: __init__.py  controller.py  safety.py
driftscale/baselines/: __init__.py  metrics.py  reactive.py  static.py
driftscale/envs/: __init__.py  cost_env.py  reward.py  spaces.py
driftscale/eval/: drift.py  forgetting.py  report.py  stats.py
driftscale/traces/: __init__.py  azure_loader.py  preprocess.py  regimes.py  synthetic.py
driftscale/utils/: config.py  seeding.py
infra/terraform/: main.tf  (+2 more)
load/: k6_script.js
scripts/: build_push_demo_image.sh  calibrate_baselines.py  eval_phase1.py  fetch_azure_sample.py  make_plots.py  plot_cost_vs_slo.py  plot_episode_rollout.py  plot_episode_rollout_comparison.py  preprocess_traces.py  run_drift_experiment.py  run_live_demo.py  run_random_policy.py  run_replay_ratio_ablation.py  run_sensitivity_analysis.py
tests/: test_aws_safety.py  test_azure_loader.py  test_baselines.py  test_drift_diagnostics.py  test_env.py  test_forgetting.py  test_preprocess.py  test_reactive_sanity.py  test_replay_ratio_harness.py  test_reward.py  test_seeding.py  test_stats.py  test_synthetic.py
(+76 files in other folders)
