[project]
name = "driftscale"
version = "0.1.0"
description = "Benchmark learned autoscaling policies under workload drift."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gymnasium>=0.29.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyyaml>=6.0.1",
    "scipy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["driftscale*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
train = [
    "sb3-contrib>=2.3.0",
    "stable-baselines3>=2.3.0",
    "torch>=2.2.0",
]
aws = [
    "boto3>=1.34.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
